--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.2.4",
